<resources>
    <string name="app_name">NavigationProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_image_1">Display Image 1</string>
    <string name="display_image_2">Display Image 2</string>
    <string name="display_image_3">Display Image 3</string>
    <string name="image1">Image1</string>
    <string name="image2">Image2</string>
    <string name="image3">Image3</string>
    <string name="image_1">Image 1</string>
    <string name="image_2">Image 2</string>
    <string name="image_3">Image 3</string>
    <string name="textview">TextView</string>
    <string name="newimage">newImage</string>
</resources>